# Elevator_Project

./: BEACON_ANALYSIS.md  README.md  elevator.code-workspace
controller_esp32/: CMakeLists.txt
controller_esp32/main/: CMakeLists.txt  bt.c  main.c
esp32_2/: CMakeLists.txt  build_output.txt
esp32_2/main/: CMakeLists.txt  main.c  reed_switch.c  reed_switch.h  sensor.c  sensor.h
