idf_component_register(
    SRCS
        "main.c"
        "reed_switch.c"
        "sensor.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        bt
        esp_event
        esp_driver_gpio
        esp_driver_i2c
        esp_http_server
        esp_netif
        esp_timer
        esp_wifi
        nvs_flash
        driver
)
